# datastructures-and-algorithms

./: .gitignore  README.md
Exam/IKT203-main/: .gitignore
Exam/IKT203-main/Portfolio/Assignment-01/: CMakeLists.txt  Song.h  option1.cpp  option2.cpp
Exam/IKT203Exam/: CMakeLists.txt  CMakePresets.json
Exam/IKT203Exam/Portfolio/: CMakeLists.txt
Exam/IKT203Exam/Portfolio/Assignment-01/: CMakeLists.txt  main.cpp  option1.cpp  option1.h  option2.cpp
Exam/IKT203Exam/Portfolio/Assignment-02/: CMakeLists.txt  option1.cpp  option1.h
Exam/IKT203Exam/Portfolio/Assignment-03/: CMakeLists.txt  TAVL.cpp  TAVL.h  TBST.cpp  TBST.h  TEmployee.h  TTreeQueue.cpp  TTreeQueue.h  option1.cpp  option1.h
Exam/IKT203Exam/Portfolio/Assignment-04/: CMakeLists.txt  main.cpp  option1.cpp  option1.h  option2.cpp  option2.h
Exam/IKT203Exam/Portfolio/SharedLib/: CMakeLists.txt  FileReaderUtils.cpp  SharedLib.h  TDoublyLinkedList.cpp  TDoublyLinkedList.h  TLinkedList.cpp  TLinkedList.h  TPerson.cpp  (+8 more)
Exam/IKT203Exam/Submissions/: CMakeLists.txt
Exam/part1/: CMakeLists.txt  TDoublyLinkedList.cpp  TDoublyLinkedList.h  TQueue.h  TStack.cpp  TStack.h  Utils.h  option1.cpp  option1.h  option2.cpp  option2.h
Fundamental_Recursion/: CMakeLists.txt  Utils.cpp  Utils.h  main.cpp
SimpleSearch/: CMakeLists.txt  EBankAccountType.h  FCompareAccount.h  Random_Name.txt  SearchSummary.h  TBankAccount.cpp  TBankAccount.h  TLinkedList.h  main.cpp
Stacks&Queues/: CMakeLists.txt  FUtils.h  TQueue.cpp  TQueue.h  TStack.cpp  TStack.h  main.cpp
TheAlgorithmicOrganizer/: CMakeLists.txt  SharedLib.h  Sort.cpp  Sort.h  Utils.cpp  main.cpp  main.h
assignment1/: .clang-format  CMakeLists.txt  TMovie.cpp  TMovie.h  TMovieList.cpp  TMovieList.h  TMovieNode.cpp  TMovieNode.h  main.cpp
assignment1/DeliveryAssignment1/: TMovie.h  main.cpp
